--- a/mattrb.com/index.slim
+++ b/mattrb.com/index.slim
@@ -1,3 +1,8 @@
+- skinstats = ["img/karambit-fit.png", "CSGO Skin Stats", "Built a website to cleanly and efficiently display any CSGO players' public inventory.", "https://csgo.mattrb.com", "csgo.mattrb.com"]
+- mvcode = ["img/mvcode.png", "MVCode", "Worked at MVCode to teach programming concepts to kids in 1st through 8th grade.", "https://www.mvcodeclub.com", "www.mvcodeclub.com"]
+- neu = ["img/neu-fit.png", "Northeastern University", "Currently studying computer science at Northeastern University in Boston, Massachussetts.", "https://www.northeastern.edu", "www.northeastern.edu"]
+- projects = [skinstats, mvcode, neu]
+
 doctype html
 html lang="en"
   head
@@ -7,7 +12,7 @@ html lang="en"
     meta name="keywords" content="Matt, Matthew, Berry, Matt Berry, Matthew Berry, mattrb"
     meta name="theme-color" content="#2D2D37"
 
-    link id="pagestyle" type="text/css" rel="stylesheet" href="css/styles.css"
+    link#pagestyle type="text/css" rel="stylesheet" href="css/styles.css"
 
     script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"
     script type="text/javascript" src="js/scroll.js"
@@ -19,73 +24,54 @@ html lang="en"
     meta name="google-site-verification" content="-HvV-RPpSFDJ0AqLbi1rj9kb-UGC8-Vq_kx_ZuuYaJc"
 
     script src="js/snow.js"
-    script window.onload = snow;
+    javascript:
+      window.onload = snow
 
     title Matthew Berry
   
   body
-    canvas id="snow" style="position:absolute;top:0;left:0;width:100%;height:100%;z-index:-1"
-    div class="full middle-div" id="splash"
-      div class="middle-div"
-        h4 class="no-wrap" Hi, I'm Matt.
-        p class="no-wrap" I make stuff and sometimes it works.
-        div class="social" id="social-top" 
+    canvas#snow style="position:absolute;top:0;left:0;width:100%;height:100%;z-index:-1"
+    div.full.middle-div#splash
+      div.middle-div
+        h4.no-wrap Hi, I'm Matt.
+        p.no-wrap I make stuff and sometimes it works.
+        div.social#social-top 
           div 
             a href="https://github.com/mattrberry"
-              img src="/img/github.svg" height="32px" 
+              img src="img/github.svg" height="32px"/
             a href="https://twitter.com/mattrossberry"
-              img src="/img/twitter.svg" height="32px" 
+              img src="img/twitter.svg" height="32px"/
             a href="https://www.facebook.com/mattrossberry"
-              img src="/img/facebook.svg" height="32px" 
+              img src="img/facebook.svg" height="32px"/
             a href="mailto:me@mattrb.com"
-              img src="/img/email.svg" height="32px" 
-    div class="bounce-me down-arrow" 
-      a id="main-arrow" class="arrow" href="#projects"   
-    div id="projects" 
+              img src="img/email.svg" height="32px"/
+    div.bounce-me.down-arrow 
+      a.arrow#main-arrow href="#projects"   
+    div#projects
       div 
         h4 Some Stuff I've Done
-        div 
-          div id="csgo-stats" 
-            div 
-              img src="/img/karambit-fit.png" height="50px" 
-              br
-              br
-              h5 CSGO Skin Stats
-              br 
-              p Built a website to cleanly and efficiently display any CSGO players' public inventory.
-              br 
-              a href="https://csgo.mattrb.com" csgo.mattrb.com
-          div id="mvcode" 
-            div 
-              img src="/img/mvcode.png" height="50px" 
-              br
-              br
-              h5 MVCode
-              br 
-              p Worked at MVCode to teach programming concepts to kids in 1st through 8th grade.
-              br 
-              a href="https://www.mvcodeclub.com" www.mvcodeclub.com
-          div id="neu" 
-            div 
-              img src="/img/neu-fit.png" height="50px" 
-              br
-              br
-              h5 Northeastern University
-              br 
-              p Currently studying computer science at Northeastern University in Boston, Massachussetts.
-              br 
-              a href="https://www.northeastern.edu" www.northeastern.edu
-    div class="social" id="social-bottom" 
+        div
+          - for project in projects
+            div
+              div
+                img src="#{project[0]}" height="50px"
+                br
+                br
+                h5 #{project[1]}
+                br
+                p #{project[2]}
+                br
+                a href="#{project[3]}" #{project[4]}
+    div.social#social-bottom 
       div 
         a href="https://github.com/mattrberry"
-          img src="/img/github.svg" height="32px" 
+          img src="img/github.svg" height="32px"/
         a href="https://twitter.com/mattrossberry"
-          img src="/img/twitter.svg" height="32px" 
+          img src="img/twitter.svg" height="32px"/ 
         a href="https://www.facebook.com/mattrossberry"
-          img src="/img/facebook.svg" height="32px" 
+          img src="img/facebook.svg" height="32px"/ 
         a href="mailto:me@mattrb.com"
-          img src="/img/email.svg" height="32px" 
-    p id="back-top"
+          img src="img/email.svg" height="32px"/
+    p#back-top
       a href="#top" 
         span
-  
