removed /'s after img tags

--- a/mattrb.com/index.slim
+++ b/mattrb.com/index.slim
@@ -38,13 +38,13 @@ html lang="en"
         div.social#social-top 
           div 
             a href="https://github.com/mattrberry"
-              img src="img/github.svg" height="32px"/
+              img src="img/github.svg" height="32px"
             a href="https://twitter.com/mattrossberry"
-              img src="img/twitter.svg" height="32px"/
+              img src="img/twitter.svg" height="32px"
             a href="https://www.facebook.com/mattrossberry"
-              img src="img/facebook.svg" height="32px"/
+              img src="img/facebook.svg" height="32px"
             a href="mailto:me@mattrb.com"
-              img src="img/email.svg" height="32px"/
+              img src="img/email.svg" height="32px"
     div.bounce-me.down-arrow 
       a.arrow#main-arrow href="#projects"   
     div#projects
@@ -65,13 +65,13 @@ html lang="en"
     div.social#social-bottom 
       div 
         a href="https://github.com/mattrberry"
-          img src="img/github.svg" height="32px"/
+          img src="img/github.svg" height="32px"
         a href="https://twitter.com/mattrossberry"
-          img src="img/twitter.svg" height="32px"/ 
+          img src="img/twitter.svg" height="32px" 
         a href="https://www.facebook.com/mattrossberry"
-          img src="img/facebook.svg" height="32px"/ 
+          img src="img/facebook.svg" height="32px" 
         a href="mailto:me@mattrb.com"
-          img src="img/email.svg" height="32px"/
+          img src="img/email.svg" height="32px"
     p#back-top
       a href="#top" 
         span
