added temporary shutdown banner

--- a/csgo.mattrb.com/index.slim
+++ b/csgo.mattrb.com/index.slim
@@ -25,6 +25,7 @@ html
 
     div#container
       h1 style="cursor:default" CSGO Skin Stats
+      h2 style="color:#EF5350;text-align:center" Valve shut down the old API. I am in the process of switching to the new one.
 
     form#input name="input" method="post" autocomplete="off"
       input#textbox type="text" name="id" placeholder="Profile URL or Inspect Link" onClick="this.select();" accesskey="n" title="Enter profile URL, inspect link, vanity URL, or SteamID64 to search. Use Alt-N on Windows or Ctrl-Alt-N on Mac to focus on input."
